[package]
name = "ai-thinker-ra08-at-commands"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Niekerk <mike@agri-io.co.za>"]

description = "AT commands client builder for the Shenzen Ai-Thinker Ra08h"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["no_std", "ai-thinker", "ra08"]

categories = ["no-std", "embedded"]

[dependencies]
atat = "0.18"
heapless = "0.7"
serde_derive = "^1"
serde = { version = "^1", default-features = false }

[dev-dependencies]



