[package]
name = "ai-thinker-ra08-at-commands"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Niekerk <mike@agri-io.co.za>"]

description = "AT commands client builder for the Shenzen Ai-Thinker Ra08h"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["no_std", "ai-thinker", "ra08"]

categories = ["no-std", "embedded"]

[dependencies]
atat = { git = "https://github.com/mvniekerk/atat.git", commit = "65a50e134f9c51672de274402861f55391228708" }
atat_derive = { git = "https://github.com/mvniekerk/atat.git", commit = "65a50e134f9c51672de274402861f55391228708" }
heapless = "0.7"
serde_derive = "^1"
serde = { version = "^1", default-features = false }

[dev-dependencies]



